// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`XPrime handle alien: earth 1x1 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "en",
      ],
      "title": "Alien: Earth 1x1",
    },
    "url": "https://backend.xprime.tv/primebox?name=Alien%3A+Earth&year=2025&id=157239&imdbId=tt13623632&season=1&episode=1",
  },
]
`;

exports[`XPrime handle superman 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "en",
      ],
      "title": "Superman (2025)",
    },
    "url": "https://backend.xprime.tv/primebox?name=Superman&year=2025&id=1061474&imdbId=tt5950044",
  },
]
`;
